--- a/index.html
+++ b/index.html
@@ -3,28 +3,124 @@
 <head>
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Rajdhani&display=swap" rel="stylesheet">
     <title>Home - Shea.Tech</title>
 </head>
-<body style="background-color: #EFE6E7">
+<style>
+    .carousel-caption {
+        position: relative;
+        left: auto;
+        right: auto;
+    }
 
+    .navbar-brand {
+        font-family: 'Alfa Slab One', cursive;
+    }
+</style>
+<body style="background-color: #5c8fff">
+
+<!--NAVBAR-->
 <nav class="navbar navbar-expand-md navbar-light">
-    <div class="container-md p-3 my-2 rounded-1" style="background-color: #8FBFE0">
-        <a class="navbar-brand fw-bold" href="#"> <img class="pe-2" src="logo.svg" alt="logo" style="height: 2rem;">SHEA.TECH</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navId" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navId">
-            <div class="navbar-nav">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-                <a class="nav-link" href="#">About Me</a>
-                <a class="nav-link" href="#">Blog</a>
+    <div class="container-md p-3 my-2 rounded-3 d-flex" style="background-color: #8FBFE0">
+        <div class="nav-left">
+            <a class="navbar-brand fw-bold" href="#"> <img class="pe-2" src="logo.svg" alt="logo" style="height: 2rem;">SHEA.TECH</a>
+        </div>
+        <div class="nav-right">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navId" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navId">
+                <div class="navbar-nav">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link" href="#">About Me</a>
+                    <a class="nav-link" href="#">Blog</a>
+                </div>
             </div>
         </div>
+
     </div>
 </nav>
 
+<!--Welcome jumbotron-->
+<div class="container p-3 rounded-1" style="background-color: #EFE6E7">
+    <div class="row mx-3 mt-2">
+        <p class="h1">Welcome to my web development journey!</p>
+    </div>
+    <div class="row row-cols-2">
+        <div class="col-12 col-md-6">
+            <p class="p-4">I'm Sean, a budding developer, and this is where I will be blogging about all the projects I am working on (including this very site!). Although the content will mostly be in the web dev category I do play with hardware, do a little 3D printing, and run a Proxmox server from my home. If you're interested in this stuff, stick around. And if you're an employer or need freelance work done DEFINITELY stick around! 😉</p>
+        </div>
+        <div class="d-none d-md-block">
+            <img src="computers.svg" alt="programmer">
+        </div>
+    </div>
+</div>
+
+<!--Powered By: Section-->
+<div class="d-flex justify-content-center">
+    <div class="display-3 mt-5">Powered By</div>
+</div>
 
 
+<div id="carouselId" class="carousel slide mt-3" data-bs-ride="true">
+    <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselId" data-bs-slide-to="0" class="active" aria-current="true" aria-label="HTML Slide"></button>
+        <button type="button" data-bs-target="#carouselId" data-bs-slide-to="1" aria-label="Bootstrap Slide"></button>
+        <button type="button" data-bs-target="#carouselId" data-bs-slide-to="2" aria-label="CSS Slide"></button>
+        <button type="button" data-bs-target="#carouselId" data-bs-slide-to="3" aria-label="JS Slide"></button>
+        <button type="button" data-bs-target="#carouselId" data-bs-slide-to="4" aria-label="Django Slide"></button>
+    </div>
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="HTML5_logo_and_wordmark.svg" class="d-block" alt="html logo" style="margin:auto; height: 350px; width: auto">
+            <div class="carousel-caption d-none d-md-block justify-content-center">
+            <p class="display-5">HTML5</p>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img src="Bootstrap_logo.svg" class="d-block" alt="Bootstrap logo" style="margin: auto; height: 350px; width: auto">
+            <div class="carousel-caption d-none d-md-block">
+                <p class="display-5">Bootstrap 5</p>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img src="CSS3_logo_and_wordmark.svg" class="d-block" alt="css logo" style="margin: auto; height: 350px; width: auto">
+            <div class="carousel-caption d-none d-md-block">
+            <p class="display-5">CSS3</p>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img src="Unofficial_JavaScript_logo_2.svg" class="d-block" alt="js logo" style="margin: auto; height: 350px; width: auto">
+            <div class="carousel-caption d-none d-md-block">
+            <p class="display-5">Javascript</p>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <div class="d-flex align-items-center" style="height: 350px;">
+                <img src="Django_logo.svg" class="d-block align-middle" alt="django logo" style="margin: auto; height: 150px; width: auto">
+            </div>
+            <div class="carousel-caption d-none d-md-block">
+            <p class="display-5">Django Python</p>
+            </div>
+        </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselId" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselId" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+    </button>
+</div>
+
+<footer>
+    <div class="container-md rounded-3" style="background-color: #8FBFE0">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi assumenda autem doloremque esse eum explicabo fuga, inventore, iste, molestias nemo nihil nulla odio omnis possimus sequi tempore tenetur veritatis voluptatibus! Aliquid consectetur fugit minus, quibusdam quo ratione ullam! Accusamus ad asperiores cupiditate dignissimos ex neque officiis omnis praesentium recusandae tenetur?
+    </div>
+</footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
